--- a/vertx-istio/zero-edge/aeon-aurora/pom.xml
+++ b/vertx-istio/zero-edge/aeon-aurora/pom.xml
@@ -174,6 +174,7 @@
                         <id>docker:build</id>
                         <phase>none</phase>
                         <goals>
+                            <goal>remove</goal>
                             <goal>build</goal>
                             <goal>start</goal>
                         </goals>
