--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -1,5 +1,9 @@
+# ----------- (DemonException) Checked, Standard Zero Configuration Failed --------------------
+# 30001 - 39999
 # Core configuration Error
 E30001: Vert.x zero server config is missing in current data "{0}"
+
+# ----------- (UpException) Runtime, Zero Container Internal Error --------------------
 # Configuration validation Error
 E10001: (V) - This rule require all elements of array is JsonObject, Now the index = {0} does not match, it''s {1}
 E10002: (V) - The data object {0} missed required field "{1}"
@@ -9,6 +13,8 @@ E10005: (V) - The dynamic key "{0}" missing in uniform extension configuration d
 E10006: (V) - The data object {0} contains unsupported/forbidden field "{1}"
 E10007: (V) - The dynamic key "{0}" data type must be JsonObject instead of others, but now "{1}"
 
+# ----------- Zero Infix ( vertx-ifx ) Exception --------------------
+# 20001 - 29999
 # Thirt part error for different integration
 E20001: (401) - Qiy interface of "/iqiyi/authorize" met errors, code = {0}, message = {1}
 E20002: (401) - Qiy token record does not contain "access_token", client_id = {0}
@@ -16,11 +22,13 @@ E20003: (424) - Ali Acs Client profile met error when it''s initializing, detail
 E20004: (424) - Ali Acs Client send request met error, details = {0}
 E20005: "(500) - You selected mode = `DEFINED`, but there missed `store` key in config"
 
-#ElasticSearch
+# ElasticSearch
 E20006: (404) - the Configuration of ElasticSearch is missinng, please check vertx-es.yml.
 E20007: (404) - parameter (index) is required, you must provide it when using full text search.
 E20008: (404) - parameter (searchText) is required, you must provide it when using full text search.
 
+# ----------- Zero Standard Runtime Exception --------------------
+# 40001 - 49999
 # (Runtime) Vertx start up error
 E40001: Vert.x zero boot class should not be null, please provide the entry of this application
 E40002: Vert.x zero boot class must be marked with annotation "Up", but ( name= {0} ) it''s missing
@@ -88,9 +96,6 @@ E40064: "(Act) Act specification is invalid, you could not call this api when is
 E40065: "(Jooq) Jooq database configuration pool key = `provider` missing, it's required when you enable Jooq"
 E40066: "(Jooq) The input `clazz` is not implemented from VertxDAO, clazz is invalid: {0}"
 E40067: "(Jooq) There is no `Clause` for field = \"{0}\" and type = \"{1}\", original field = \"{2}\""
-E40068: "(411) - When you upload file, the `Content-Length` must be matched, but current is {0}"
-E40069: "(415) - The declared type {0} is not match to MIME {1}"
-E40078: "(409) - Your job is \"FORMULA\", the formulat could not be parsed: {0}"
 
 # Console exception
 E40070: "The default launcher key mustn''t be overwrite. ( config )"
@@ -101,10 +106,14 @@ E40074: "The command `{0}` plugin is null or could not be found, please check yo
 E40075: "The wall type is invalid `{0}` in `{1}`, please use `extension` instead when you want to define"
 E40076: "You have selected the wall `{0}`, the expected size should `{1}`"
 E40077: "The provider {0} is conflict because it''s invalid AuthenticateProvider"
-
 # RxJava
 E45001: (V) - The field "{1}" of json array "{0}" must be mapped to unique element, but current reduced is "{2}"
 
+# ----------- Zero Aeon Cloud Runtime Exception --------------------
+# 50001 - 59999
+
+# ----------- Zero Web Runtime Exception --------------------
+# 60000 - 60001
 # (Web) Exception for web
 E60000: (400) - Request validation failure, class = {0}, method = {1}, message = {2}
 E60001: (400) - The input content could not be converted into valid resource user {0}
@@ -147,7 +156,7 @@ E60032: "(500) - (Jwt) Jwt runtime met errors, please check details = {0}"
 E60033: "(401) - (Jwt) Jwt executor result is false, authorization token = {0}"
 
 # (Web) Exception for standard third part
-E60034: "(500) - (Shared) SharedMap Error happened when do operation: {0}"
+E60034: "(500) - (Shared) SharedMap Error happened when do operation：{0}"
 E60035: "(500) - (Shared) Your map {0} processing met issue when execute method {1}"
 
 # Excel exception
@@ -166,7 +175,13 @@ E60048: "(415) The argument type of @PointParam is invalid, valid is ( List<T>, 
 E60049: "({0}) HttpException: {1}"
 E60050: "(501) - This api is not supported or implemented, please check your specification, source = {0}"
 E60051: "(500) - System found `null` return value of method `{0}` in class `{1}`"
+E60052: "(411) - When you upload file, the `Content-Length` must be matched, but current is {0}"
+E60053: "(415) - The declared type {0} is not match to MIME {1}"
+E60054: "(409) - Your job is \"FORMULA\", the formulat could not be parsed: {0}"
 
+
+# ----------- Zero Extension Module Exception --------------------
+# 80001 - 89999
 # CRUD Module
 E80100: "(404) - (CRUD) You missed `module` = `{0}` definition in file \"plugin/crud/module/\" folder"
 E80101: "(404) - (CRUD) You missed `column` configuration and instance is null. access module = {0}"
