--- a/vertx-istio/pom.xml
+++ b/vertx-istio/pom.xml
@@ -22,6 +22,12 @@
             <groupId>cn.vertxup</groupId>
             <artifactId>vertx-up</artifactId>
         </dependency>
+        <!-- Cluster Manager -->
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-ignite</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
