--- a/vertx-istio/pom.xml
+++ b/vertx-istio/pom.xml
@@ -27,6 +27,12 @@
             <groupId>io.vertx</groupId>
             <artifactId>vertx-ignite</artifactId>
             <version>${vertx.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jetbrains</groupId>
+                    <artifactId>annotations</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
     <build>
