--- a/vertx-ifx/zero-ifx-git/pom.xml
+++ b/vertx-ifx/zero-ifx-git/pom.xml
@@ -9,8 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>zero-ifx-ftp</artifactId>
-    <name>Infix:「zero-ifx-ftp」File Transfer Service</name>
+    <artifactId>zero-ifx-git</artifactId>
+    <name>Infix:「zero-ifx-git」Git Repository Management</name>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
