--- a/vertx-ifx/zero-ifx-git/pom.xml
+++ b/vertx-ifx/zero-ifx-git/pom.xml
@@ -16,5 +16,11 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-
+    <dependencies>
+        <!-- Git -->
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+        </dependency>
+    </dependencies>
 </project>
