--- a/vertx-istio/zero-edge/aeon-aurora/.env.development
+++ b/vertx-istio/zero-edge/aeon-aurora/.env.development
@@ -1,7 +1,7 @@
 # --------------------- 环境变量专用区域 -----------------------
 # ZERO_AEON 基础环境
-export ZERO_AEON=/Users/lang/Develop/Source/ox-workshop/native-cloud/vertx-zero-cloud/platform/cn
+ZERO_AEON=/Users/lang/Develop/Source/ox-workshop/native-cloud/vertx-zero-cloud/platform/cn
 # XXX_CLOUD 基础环境（此处XXX_CLOUD没有就不考虑）
-# export ZK_APP=/Users/lang/Develop/Source/ox-workshop/native-cloud/vertx-zero-cloud
+# ZK_APP=/Users/lang/Develop/Source/ox-workshop/native-cloud/vertx-zero-cloud
 # 语言环境
-export ZA_LANG="cn"
+ZA_LANG=cn
