--- a/vertx-istio/zero-edge/aeon-code/src/main/resources/aeon/contained/zapp-axis.yml
+++ b/vertx-istio/zero-edge/aeon-code/src/main/resources/aeon/contained/zapp-axis.yml
@@ -6,7 +6,7 @@ boot:
     #   run:    可配置扩展的 HRun 插件
   alive:
     #   novae:   管理者，实现标准的 HNovae 接口，传入 HAeon
-    #   novae:   io.vertx.aeon.uca.alive.AeonNovae
+    novae:       io.vertx.aeon.uca.alive.AeonNovae
     #   nova:    执行者，实现标准的 HNova 接口，传入  HRepo
     nova:        io.vertx.aeon.uca.alive.NovaGit
     #   nebula:  观察者，实现标准的 HNebula
