HFS abstract from lower

--- a/vertx-istio/zero-edge/aeon-aurora/.env.development
+++ b/vertx-istio/zero-edge/aeon-aurora/.env.development
@@ -2,6 +2,6 @@
 # ZERO_AEON 基础环境
 ZERO_AEON=/Users/lang/Develop/Source/ox-workshop/native-cloud/vertx-zero-cloud/platform/cn
 # XXX_CLOUD 基础环境（此处XXX_CLOUD没有就不考虑）
-# ZK_APP=/Users/lang/Develop/Source/ox-workshop/native-cloud/vertx-zero-cloud
+ZK_APP=/Users/lang/Develop/Source/ox-workshop/native-cloud/vertx-zero-cloud/platform/cn
 # 语言环境
 ZA_LANG=cn
