Aeon Cloud Admin

--- a/vertx-istio/zero-edge/aeon-aurora/src/main/resources/aeon/zapp.yml
+++ b/vertx-istio/zero-edge/aeon-aurora/src/main/resources/aeon/zapp.yml
@@ -10,4 +10,5 @@ aeon:
     # 当前运行库，HKinect 实例
     kinect:
       account:      silentbalanceyh@126.com
+      secret:       ZK_PASS
       path:         ZK_APP
