--- a/vertx-istio/zero-edge/aeon-aurora/src/main/resources/aeon/zapp.yml
+++ b/vertx-istio/zero-edge/aeon-aurora/src/main/resources/aeon/zapp.yml
@@ -4,11 +4,12 @@ aeon:
   # 1. MIX - 混合模式：公有 + 私有
   # 2. MIN - 托管模式：公有
   # 3. MIRROR - 独占模式：私有
-  mode: MIN
+  mode: MIX
   # ----------------- 低代码开发专用库配置 ---------------------
   repo:
     # 当前运行库，HKinect 实例
     kinect:
       account:      silentbalanceyh@126.com
-      secret:       ZK_PASS
-      path:         ZK_APP
+    kidd:
+      uri:          https://github.com/silentbalanceyh/aeon-cloud.git
+      account:      silentbalanceyh@126.com
