name for server

--- a/vertx-istio/zero-edge/aeon-aurora/src/main/resources/aeon/zapp.yml
+++ b/vertx-istio/zero-edge/aeon-aurora/src/main/resources/aeon/zapp.yml
@@ -1,5 +1,7 @@
 # ---------------- 打开Aeon系统 ----------------
 aeon:
+  # 当前模块名称（只能是类型维度，有可能水平多实例）
+  name: aeon-aurora
   # 基础云的搭建模式：MIX, MIN, MIRROR
   # 1. MIX - 混合模式：公有 + 私有
   # 2. MIN - 托管模式：公有
