--- a/vertx-istio/zero-edge/aeon-code/src/main/resources/aeon/contained/zapp.yml
+++ b/vertx-istio/zero-edge/aeon-code/src/main/resources/aeon/contained/zapp.yml
@@ -18,8 +18,10 @@ aeon:
       path:         ZERO_AEON
     kinect:
       secret:       ZK_PASS
+      path:         ZK_APP
     kidd:
       secret:       ZK_PASS
+      path:         ZK_APP
 
 
 
