--- a/vertx-istio/zero-edge/pom.xml
+++ b/vertx-istio/zero-edge/pom.xml
@@ -14,5 +14,6 @@
     <modules>
         <module>aeon-code</module>
         <module>aeon-aurora</module>    <!-- 奥罗拉：平台后端 -->
+        <module>aeon-vie</module>    <!-- 单机后端 -->
     </modules>
 </project>
