--- a/vertx-gaia/vertx-tp/pom.xml
+++ b/vertx-gaia/vertx-tp/pom.xml
@@ -15,6 +15,11 @@
             <groupId>cn.vertxup</groupId>
             <artifactId>vertx-co</artifactId>
         </dependency>
+        <!-- Fix MySQL 8 Issue -->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
         <!-- Hikari Cp -->
         <dependency>
             <groupId>com.zaxxer</groupId>
