--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,7 @@
         <rxjava2.version>2.2.21</rxjava2.version>
         <netty.tcnative.version>2.0.54.Final</netty.tcnative.version>
         <netty.version>4.1.79.Final</netty.version>
+        <io.termd.version>1.1.9</io.termd.version>
 
         <!-- Upload Issue -->
         <hazelcast.version>5.1.3</hazelcast.version>
@@ -474,6 +475,12 @@
                         <artifactId>vertx-auth-common</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/io.termd/termd-core -->
+            <dependency>
+                <groupId>io.termd</groupId>
+                <artifactId>termd-core</artifactId>
+                <version>${io.termd.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.vertx</groupId>
