--- a/vertx-ifx/zero-ifx-stomp/pom.xml
+++ b/vertx-ifx/zero-ifx-stomp/pom.xml
@@ -14,6 +14,20 @@
         <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-stomp</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.vertx</groupId>
+                    <artifactId>vertx-auth-common</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.vertx</groupId>
+                    <artifactId>vertx-bridge-common</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>io.vertx</groupId>
+                    <artifactId>vertx-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
