--- a/vertx-pin/zero-ke/pom.xml
+++ b/vertx-pin/zero-ke/pom.xml
@@ -12,10 +12,12 @@
     <artifactId>zero-ke</artifactId>
     <name>Extension:「zero-ke」Ke - Kernel Engine</name>
     <dependencies>
+        <!-- 模块化改造 -->
         <dependency>
             <groupId>cn.vertxup</groupId>
             <artifactId>vertx-up</artifactId>
         </dependency>
+        <!-- 插件 -->
         <dependency>
             <groupId>cn.vertxup</groupId>
             <artifactId>zero-ifx-excel</artifactId>
