--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -217,6 +217,7 @@ E80221: "(401) - (RBAC) Your wrong password typing exceed `{0}` times, please wa
 E80222: "(401) - (RBAC) Image code ( {0} ) that you provided is wrong"
 E80223: "(409) - (RBAC) The `uiType` defined should not be NONE, please check your configuration of code = `{0}` in Admin Panel"
 E80224: "(409) - (RBAC) The `phase` of ui part must be EAGER, but not it''s {0}"
+E80225: "(404) - (RBAC) The `uiType` defined {0} could not detect correct HAdminCompiler component"
 
 # Kernel Module
 E80214: "(409) - (Ke) Zero system could not identify the session you provided `{0}`, maybe it''s expired or destroyed"
