--- a/vertx-pin/zero-rbac/src/main/resources/authority/auth.menu/res.menu.read/h.config.json
+++ b/vertx-pin/zero-rbac/src/main/resources/authority/auth.menu/res.menu.read/h.config.json
@@ -1,10 +1,6 @@
 {
     "field": "name",
     "webConfig": {
-        "name": {
-            "empty": true,
-            "parser": "aclRows",
-            "source": "name"
-        }
+        "empty": true
     }
 }
