--- a/vertx-pin/zero-rbac/src/main/resources/authority/auth.menu/dm.config.json
+++ b/vertx-pin/zero-rbac/src/main/resources/authority/auth.menu/dm.config.json
@@ -5,5 +5,9 @@
         "SIDE-MENU,主菜单",
         "DEV-MENU,开发者菜单",
         "SYS-MENU,实施者菜单"
+    ],
+    "webAdmit": [
+        "DEV-MENU",
+        "SYS-MENU"
     ]
 }
