--- a/vertx-pin/zero-rbac/src/main/resources/authority/auth.menu/res.menu.read/h.config.json
+++ b/vertx-pin/zero-rbac/src/main/resources/authority/auth.menu/res.menu.read/h.config.json
@@ -1,6 +1,7 @@
 {
-    "field": "name",
     "webConfig": {
-        "empty": true
+        "empty": true,
+        "initializer": "aclInHS",
+        "requester": "aclOutHS"
     }
 }
