Qr View for Workflow

--- a/vertx-pin/zero-ui/src/main/resources/plugin/sql/database.yml
+++ b/vertx-pin/zero-ui/src/main/resources/plugin/sql/database.yml
@@ -25,6 +25,9 @@ databaseChangeLog:
       file: plugin/sql/ui/UI_LIST.sql
       relativeToChangelogFile: false
   - include:
+      file: plugin/sql/ui/UI_LIST_QR.sql
+      relativeToChangelogFile: false
+  - include:
       file: plugin/sql/ui/UI_VISITOR.sql
       relativeToChangelogFile: false
   # UI选项专用表
