--- a/vertx-pin/zero-rbac/src/main/resources/plugin/rbac/configuration.json
+++ b/vertx-pin/zero-rbac/src/main/resources/plugin/rbac/configuration.json
@@ -27,5 +27,6 @@
     "permissionPool": "POOL_PERMISSIONS",
     "supportGroup": true,
     "supportSecondary": true,
-    "supportMultiApp": true
+    "supportMultiApp": true,
+    "supportIntegration": false
 }
