New Feature for User Directory of LDAP

--- a/vertx-pin/zero-is/src/main/resources/plugin/sql/database.yml
+++ b/vertx-pin/zero-is/src/main/resources/plugin/sql/database.yml
@@ -8,3 +8,6 @@ databaseChangeLog:
   - include:
       file: plugin/sql/is/I_MESSAGE.sql
       relativeToChangelogFile: false
+  - include:
+      file: plugin/sql/is/I_PORTFOLIO.sql
+      relativeToChangelogFile: false
