HS Component for Authority Management

--- a/vertx-pin/zero-wf/src/main/resources/authority/auth.flow/dm.config.json
+++ b/vertx-pin/zero-wf/src/main/resources/authority/auth.flow/dm.config.json
@@ -17,5 +17,10 @@
     "webView": {
         "name": "`${view}`",
         "position": "`${position}`"
+    },
+    "webArea": {
+        "source": "workflow.cat",
+        "group": "type",
+        "field": "code"
     }
 }
