--- a/vertx-pin/zero-wf/src/main/resources/authority/auth.flow/dm.config.json
+++ b/vertx-pin/zero-wf/src/main/resources/authority/auth.flow/dm.config.json
@@ -7,15 +7,15 @@
             "icon": "upload",
             "text": "保存",
             "type": "primary",
-            "key": "__KEY_SAVE",
-            "connectId": "__ID_SAVE"
+            "key": "__ID_FLOW_SAVE",
+            "connectId": "__CID_FLOW_SAVE"
         },
         {
             "icon": "cloud-upload",
             "text": "保存所有",
             "type": "primary",
-            "key": "__OUTER_KEY_SAVE_ALL",
-            "connectId": "__OUTER_ID_SAVE_ALL"
+            "key": "__ID_FLOW_ALL",
+            "connectId": "__CID_FLOW_ALL"
         }
     ],
     "webTag": {
